<resources>
    <string name="app_name"><b>IBDC || Blood Donor Anywhere...</b></string>
    <string name="real_time_db_firebase">https://ibdc-blood-donors-default-rtdb. firebaseio. com/</string>
    <string name="if_you_can_help_them_make_call_or_share">If you can help them make CALL or SHARE. </string>
    <string name="more">আরও</string>
    <string name="comma">,</string>
    <string name="dari">।</string>
    <string name="heading">Displayed Requests from ALL Unions of Ishwardi Upazila. </string>
    <string name="heading_tab">To change Union edit below. </string>
    <string name="union">ইউনিয়ন</string>
    <string name="donors">রক্তদাতার বিস্তারিত</string>
    <string name="request_blood">Request Blood</string>
    <string name="all">ALL</string>
    <string name="make_call_or_share_if_needed">Make CALL or SHARE if Needed. </string>
    <string name="divisions">বিভাগ</string>
    <string name="district">জেলা</string>
    <string name="upazila">উপজেলা</string>
    <string name="ibdc">ঈশ্বরদী ব্লাড ডোনার ক্লাব</string>
    <string name="forgot_password">পাসওয়ার্ড ভুলে গেছেন?</string>
    <string name="change_password">পাসওয়ার্ড পরিবর্তন করুন!</string>
    <string name="isExitTitle">অ্যাপ থকে বের হতে চান?</string>
    <string name="cmtDelete">কমেন্ট ডিলিট করতে চান?</string>
    <string name="cmtEdit">কমেন্ট ইডিট করতে চান?</string>
    <string name="edited">Edited : </string>
    <string name="login">লগইন</string>
    <string name="enter_phone_no">মোবাইল নম্বর দিন!</string>
    <string name="enter_password">পাসওয়ার্ড দিন…</string>
    <string name="login1">লগইন!</string>
    <string name="thank_txt">রক্তদানে উদ্ভুদ্ধ হওয়ায় আপনাকে ধন্যবাদ!!</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="confirm_password">পাসওয়ার্ড নিশ্চিত করুন!</string>
    <string name="sign_up">সাইনআপ!</string>
    <string name="beDonor"><b>রক্তদাতা হউন!</b></string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="title_activity_listand_map">ListandMapActivity</string>
    <string name="title_home">হোম</string>
    <string name="title_dashboard">ড্যাশবোর্ড</string>
    <string name="title_notifications">নোটিফিকেশন</string>
    <string name="search">খুঁজুন</string>
    <string name="Email"><i> ই-ইমেল</i></string>
    <string name="old_Password">বর্তমান পাসওয়ার্ড দিন…</string>
    <string name="new_Password">নতুন পাসওয়ার্ড দিন…</string>
    <string name="re_new_Password">কনফ্রম পাসওয়ার্ড দিন…</string>
    <string name="phone"><i>ফোন</i></string>
    <string name="cover">কভার</string>
    <string name="register">নিবন্ধন</string>
    <string name="last_name">পদবী</string>
    <string name="first_name">নাম</string>
    <string name="motive"><i>আমি বাঁচাতে চাই একটি প্রাণ,\nতাইতো করবো রক্তদান!</i></string>
    <string name="motive_line"><i>আমি বাঁচাতে চাই একটি প্রাণ, তাইতো করবো রক্তদান!</i></string>
    <string name="total"><i>মোটঃ </i></string>
    <string name="address">ঠিকানা</string>
    <string name="next">পরবর্তী</string>
    <string name="village">গ্রাম</string>
    <string name="verification">ভেরিফিকেশনস</string>
    <string name="argent_info">জরুরী তথ্য</string>
    <string name="mobile_number">মোবাইল নম্বর</string>
    <string name="blood_group">রক্তের গ্রূপ</string>
    <string name="verify">OTP ভেরিফাই করুন!</string>
    <string name="enter_Otp">OTP দিন!!</string>
    <string name="verify_txt">ভেরিফাই!</string>
    <string name="header">হেডার</string>
    <string name="notice_board">নোটিশ বোর্ড</string>
    <string name="open">খোলা</string>
    <string name="close">বন্ধ</string>
    <string name="profile_name">প্রোফাইলের নাম</string>
    <string name="home">হোম</string>
    <string name="dashboard">ড্যাশবোর্ড</string>
    <string name="logout">লগ আউট</string>
    <string name="about">আমাদের সম্পর্কে জানুন…</string>
    <string name="created_by">Created by</string>
    <string name="instructions"><b>নির্দেশাবলী</b></string>
    <string name="why_donate"><b>রক্তদানের উপকারিতা</b></string>
    <string name="be_donor"><b>রক্তদাতা হউন</b></string>
    <string name="search_donor"><b>রক্তদাতা খুঁজুন</b></string>
    <string name="about_us"><b>আমাদের সম্পর্কে জানুন</b></string>
    <string name="rate_us"><b>আমাদের সম্পর্কে বলুন</b></string>
    <string name="about_des"><b>এই স্লোগানকে বুকে ধারণ করে  রক্তের অভাবে মুমূর্ষু রোগীদের পাশে দাড়ানোর উদ্দেশ্যে নিয়ে পথ চলা শুরু
        করে ঈশ্বরদী ব্লাড ডোনার ক্লাব।২০২০ সালে করোনা মহামারী মধ্যে যখন সবাই ঘর বন্দী হয়ে যায় তখন অনেক টা সেচ্ছায় রক্তদাতা দের কে
        খুজে পাওয়া মুশকিল হয়ে যায়।কিন্তু হাসপাতালে রক্তের হাহাকার কমতে থাকে না বরং বাড়তেই থাকে। অবশেষে ২০২০ সালের ৭ই জুলাই
        রক্তদানের সংগঠন হিসাবে প্রতিষ্ঠা করা হয় ঈশ্বরদী ব্লাড ডোনার ক্লাব।ঈশ্বরদী ব্লাড ডোনার ক্লাব একটি অরাজনৈতিক সামাজিক সংগঠন।আমরা বেশীরভাগ সময় দেখি রোগীর লোক সেচ্ছায় রক্তদাতাদের
        সাথে যোগাযোগ করতে পারে না। যার কারনে রোগীর লোক সহজে তাদের রোগীর জন্য রক্ত যোগার করতে হিমশিম খায়।সেচ্ছায় রক্তদাতা
        ও রোগীর লোকদের মধ্যে যোগাযোগ করিয়ে দেওয়ার কাজ টা করে যাচ্ছে ঈশ্বরদী ব্লাড ডোনার ক্লাব।\n\nসকলের ভালোবাসায় ঈশ্বরদী ব্লাড
        ডোনার ক্লাব আরো সামনের দিকে এগিয়ে যাবে আপনাদের সম্মেলিত সহযোগিতায়।</b>\n\n
    </string>
    <string name="founder">সাদেকুল ইসলাম শিমুল\nপ্রতিষ্ঠাতা\nঈশ্বরদী ব্লাড ডোনার ক্লাব</string>
    <string name="profit_of_blood_donation">রক্তদানের উপকারিতা</string>
    <string name="profit_of_blood_donation1">
        রক্তদান হল কোন প্রাপ্তবয়স্ক সুস্থ মানুষের স্বেচ্ছায় রক্ত দেবার প্রক্রিয়া।
        এই দান করা রক্ত পরিসঞ্চালন করা হয় অথবা অংশীকরণের মাধ্যমে ঔষধে পরিণত করা হয়।
        উন্নত দেশে বেশিরভাগ রক্তদাতাই হলেন স্বেচ্ছায় রক্তদাতা, যারা সামাজিক দায়বদ্ধতা থেকে রক্তদান করেন।
        দরিদ্র দেশগুলোতে এ ধরনের প্রতিষ্ঠিত স্বেচ্ছায় রক্তদাতার সংখ্যা বেশ কম, বেশিরভাগ রক্তদাতাই কেবল তাদের
        পরিচিতজনদের প্রয়োজনে রক্তদান করে থাকেন। বেশির ভাগ রক্তদাতাই সমাজসেবামূলক কাজ হিসেবে রক্তদান করেন,
        তবে কিছু মানুষ পেশাদার রক্তদাতা, অর্থাৎ তারা অর্থ বা কোন ভাতার বিনিময়ে রক্তদান করে থাকেন। আবার রক্তদাতা
        তার ভবিষ্যত প্রয়োজনে রক্ত পেতে পারেন। রক্তদান অপেক্ষাকৃত নিরাপদ, তবে কিছু রক্তদাতার যে জায়গায় সূঁচ প্রবেশ করানো হয়
        সেখানে কালশিরে পড়ে, আবার কেউ কেউ রক্তদানের পর দুর্বলতা অনুভব করেন।সম্ভাব্য রক্তদাতার রক্ত ব্যবহার যে সব কারণে ঝুঁকিপূর্ণ
        হতে পারে তার সবকিছুই পরীক্ষা করা হয়। এই পরীক্ষাগুলোর মধ্যে রক্তের মাধ্যমে ছড়ায় এমন রোগ (যেমন এইচআইভি ও ভাইরাল হেপাটাইটিস)
        এর পরীক্ষা অন্তর্ভুক্ত। রক্তদাতাকে তার চিকিৎসার ইতিহাস জিজ্ঞাসা করা হয় এবং তার একটি সংক্ষিপ্ত শারীরিক পরীক্ষা করা হয় তা নিশ্চিত করার
        জন্যে যে রক্তদান তার শরীরের জন্যে ক্ষতিকর হবে না। একজন রক্তদাতা কতদিন পরপর রক্তদান করতে পারবেন তা নির্ভর করে তিনি কী দান
        করছেন তার ওপর এবং যে দেশে রক্তদান সম্পন্ন হচ্ছে সে দেশের আইনের উপর । তবে প্রতি চারমাস অন্তর অর্থাৎ ১২০ দিন পর পর মানবদেহে
        নতুন রক্ত তৈরি হয়।গৃহীত রক্তের পরিমাণ ও পদ্ধতি ভিন্ন হতে পারে, তবে সাধারণতঃ ৫০০ মিলিলিটার (অথবা প্রায় ১ ইউএস পাইন্ট)[১]সম্পূর্ণ
        রক্ত নেওয়া হয়। পরিসঞ্চালনে ব্যবহৃত বেশির ভাগ রক্ত উপাদানই অল্প আয়ু বিশিষ্ট, এবং এ কারণে অপরিবর্তিত সরবরাহ নিশ্চিত করা একটি
        সবসময়কার সমস্যা।
    </string>
    <string name="profit_of_blood_donation2">
        <b>\n১. রক্তদানের প্রথম এবং প্রধান কারণ,একজনের দানকৃত রক্ত আরেকজন মানুষের জীবন বাঁচাবে।\n\n
           ২. রক্তদান স্বাস্থ্যের জন্য অত্যন্ত উপকারী।
        রক্তদান করার সঙ্গে সঙ্গে শরীরের মধ্যে অবস্থিত ‘বোন ম্যারো’ নতুন কণিকা তৈরির জন্য উদ্দীপ্ত হয় এবং রক্তদানের ২ সপ্তাহের মধ্যে নতুন
        রক্তকণিকার জন্ম হয়ে ঘাটতি পূরণ হয়ে যায়। বছরে ৩ বার রক্তদান আপনার শরীরে লোহিত কণিকাগুলোর প্রাণবন্ততা বাড়িয়ে তোলার সাথে
        সাথে নতুন কণিকা তৈরির হার বাড়িয়ে দেয়। উল্লেখ্য রক্তদান করার মাত্র ৪৮ ঘণ্টার মধ্যেই দেহে রক্তের পরিমাণ স্বাভাবিক হয়ে যায়।\n\n
        ৩. নিয়মিত রক্তদান করলে হৃদরোগ ও হার্ট অ্যাটাকের ঝুঁকি অনেকটাই কমে যায়।\n\n
        ৪. আরেক গবেষণায় দেখা যায়, যারা বছরে দুই বার
        রক্ত দেয়, অন্যদের তুলনায় তাদের ক্যান্সারে আক্রান্ত হওয়ার ঝুঁকি কম থাকে। বিশেষ করে ফুসফুস, লিভার, কোলন, পাকস্থলী ও গলার
        ক্যান্সারের ঝুঁকি নিয়মিত রক্তদাতাদের ক্ষেত্রে অনেক কম পরিলক্ষিত হয়েছে। চার বছর ধরে ১২০০ লোকের ওপর এ গবেষণা চালানো হয়েছিলো।
        \n\n
        ৫. নিয়মিত স্বেচ্ছায় রক্তদানের মাধ্যমে নিজের শরীরে বড় কোনো রোগ আছে কিনা তা বিনা খরচে জানা যায়। যেমন : হেপাটাইটিস-বি,
        হেপাটাইটিস-সি, সিফিলিস, এইচআইভি (এইডস) ইত্যাদি।\n৬. প্রতি পাইন্ট (এক গ্যালনের আট ভাগের এক ভাগ) রক্ত দিলে ৬৫০ ক্যালরি
        করে শক্তি খরচ হয়। অর্থাৎ ওজন কমানোর ক্ষেত্রেও এটি গুরুত্বপূর্ণ ভূমিকা রাখতে পারে।\n
        \n

        বিশ্ব স্বাস্থ্য সংস্থার পরিসংখ্যান অনুযায়ী, প্রতিবছর বিশ্বের ৯ কোটি ২০ লাখ মানুষ রক্ত দিয়ে থাকে।
        তবে উন্নত বিশ্বে স্বেচ্ছা রক্তদানের হার প্রতি এক হাজারে ৪০ জন হলেও উন্নয়নশীল বিশ্বে প্রতি এক হাজারে ৪ জনেরও কম।
        বিশ্ব স্বাস্থ্য সংস্থার লক্ষ্য ২০২০ সালের মধ্যে স্বেচ্ছায় রক্তদানের মাধ্যমে চাহিদার শতভাগ রক্তের সরবরাহ নিশ্চিত করা।
        এই লক্ষ্যে প্রতিবছরের ১৪ জুন বিশ্ব রক্তদাতা দিবস পালন হয়ে আসছে। মূলত যারা মানুষের জীবন বাঁচাতে স্বেচ্ছায় ও
        বিনামূল্যে রক্তদান করেনতাদের দানের মূল্যায়ন, স্বীকৃতি দিতে সেইসঙ্গে সাধারণ মানুষকে রক্তদানে উৎসাহিত করার লক্ষ্যে দিবসটি পালন করা হয়।
        </b>
    </string>
    <string name="ins_title"><b>রক্ত দেয়ার আগেই জেনে নিন কিছু জরুরি তথ্য</b></string>
    <string name="ins_title_inner1"><b>রক্ত দেয়া কেন প্রয়োজন?</b></string>
    <string name="developer_name"><b>Sumon Kumar</b></string>
    <string name="setting">সেটিংস</string>
    <string name="sds"><b>Apps Formation Technology</b></string>
    <string name="developer_email"><b>sumonkmrofficial@gmail.com</b></string>
    <string name="password_update">পাসওয়ার্ড পরিবর্তন করুন।</string>
    <string name="changeEmail"> ইমেল পরিবর্তন করুন।</string>
    <string name="change_phone">মোবাইল নাম্বার পরিবর্তন করন।</string>
    <string name="reset"><b>রিসেট!</b></string>
    <string name="cancel"><b>বাতিল!</b></string>
    <string name="time">11:30 pm</string>
    <string name="date">03/1/23</string>
    <string name="comment_hint">রক্তদাতা সম্পর্কে কিছু লিখুন…</string>
    <string name="website"><b>appsformation.com</b></string>
</resources>