<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#8AAA5A5A"
    android:weightSum="6"
    tools:context=".DispalyRequestsActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        >



        <TextView
            android:layout_marginTop="2dp"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/more"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/distHelp"
            android:text="@string/heading"/>

        <TextView
            android:id="@+id/marquee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:fontFamily="@font/varela_round"
            android:text="@string/if_you_can_help_them_make_call_or_share"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:contextClickable="true"
            android:layout_toStartOf="@id/more"
            android:clickable="true"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/more"
            android:onClick="popUp"
            android:tooltipText="@string/more"
            android:src="@drawable/ic_baseline_more_vert_24"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/more" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.9"
        android:id="@+id/requestList"/>

    <RelativeLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/relative1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_tab"
            android:layout_above="@id/dist"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:id="@+id/dist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/btnAddRequest"
           >

            <TextView
                android:padding="10dp"
                android:background="@drawable/square_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/union"
                android:textSize="12sp"
                android:layout_marginEnd="5dp"/>
            <EditText
                android:textAlignment="center"
                android:padding="10dp"
                android:textSize="12sp"
                android:text="@string/all"
                android:id="@+id/districtFilterRequest"
                android:imeActionLabel=""
                android:imeOptions="actionDone"
                android:inputType="textCapCharacters"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/square_border"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:text="@string/request_blood"
            android:onClick="requestBlood"
            android:id="@+id/btnAddRequest"
            android:layout_above="@id/btnViewDonors"/>

        <com.google.android.material.button.MaterialButton
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/view_donors"
            android:textAllCaps="false"
            android:onClick="viewDonorsList"
            android:id="@+id/btnViewDonors"/>

    </RelativeLayout>

</LinearLayout>