<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/colorPrimary"
    android:visibility="gone"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/created_by"
        android:textSize="@dimen/tab_label"
        android:textColor="@color/white"
        android:fontFamily="@font/varela_round"
        />
    <View
        android:layout_width="@dimen/_190dp"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/sds_dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sds"
        android:textSize="@dimen/form_txt"
        android:textColor="@color/white"
        android:fontFamily="@font/varela_round"
        />

    <LinearLayout
        android:id="@+id/site_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/aft_image"
            android:layout_width="@dimen/_190dp"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:src="@drawable/aft_logo_full"
            />
        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/website"
            android:textSize="@dimen/profile_txt"
            android:drawablePadding="@dimen/_2dp"
            android:textColor="@color/white"
            android:fontFamily="@font/varela_round"
            app:drawableStartCompat="@drawable/website_icon" />
    </LinearLayout>
    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/developer_email"
        android:textSize="@dimen/profile_txt"
        android:drawablePadding="@dimen/_2dp"
        android:textColor="@color/white"
        android:fontFamily="@font/varela_round"
        app:drawableStartCompat="@drawable/baseline_email_24"
        />

</LinearLayout>