<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/tns"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_textbox"
        android:elevation="@dimen/shadow"
        android:padding="@dimen/_10dp"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:orientation="vertical"
        >


    <ImageView
        android:layout_width="@dimen/_80dp"
        android:layout_height="@dimen/_40dp"
        android:src="@drawable/ibdc_logo_tns"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/shadow"
        android:fontFamily="@font/des_font"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/manu_txt" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_5dp"
        android:background="@color/colorAccentDark"
        />

    <EditText
        android:id="@+id/resetPass"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:autofillHints=""
        android:background="@drawable/text_box_border_coustom"
        android:drawableStart="@drawable/ic_baseline_mark_email_unread_24"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="3dp"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/profile_txt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:weightSum="2">
        <Button
            android:id="@+id/cBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_5dp"
            android:text="@string/cancel"
            android:textSize="@dimen/card_txt"
            android:elevation="@dimen/shadow"
           />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_5dp"
            android:textSize="@dimen/card_txt"
            android:elevation="@dimen/shadow"
            android:text="@string/reset"
            />
    </LinearLayout>


    </LinearLayout>

</LinearLayout>